--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -16,9 +16,12 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
 
 // Component styles are injected through grunt
 // injector
+@import 'addcompany/addcompany.scss';
+@import 'addjob/addjob.scss';
 @import 'admin/admin.scss';
+@import 'companies/companies.scss';
+@import 'jobs/jobs.scss';
 @import 'main/main.scss';
-@import '../components/footer/footer.scss';
 @import '../components/modal/modal.scss';
 // endinjector
 
