--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -33,4 +33,15 @@ $fa-font-path: "../bower_components/font-awesome/fonts";
   .title-header {
     display: none;
   }
+  #main {
+    margin: 0px;
+  }
+  .login-box {
+    margin-top: 100px;
+  }
+  @media screen and (min-width: 750px) {
+    .login-box {
+      margin-top: 180px; 
+    }
+  }
 }
