--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -170,9 +170,9 @@
 				<span> <!-- User image size is adjusted inside CSS, it should stay as it -->
 
 					<a href="javascript:void(0);" id="show-shortcut" data-action="toggleShortcut">
-						<img src="img/avatars/sunny.png" alt="me" class="online">
+						<img src="assets/images/avatar.png" alt="me" class="online">
 						<span>
-							john.doe
+							{{ nav.getCurrentUser().name }}
 						</span>
 						<i class="fa fa-angle-down"></i>
 					</a>
