--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -31,7 +31,7 @@
 			<div id="logo-group">
 
 				<!-- PLACE YOUR LOGO HERE -->
-				<span id="logo"> <img src="assets/images/image_1.png" alt="SmartAdmin"> </span>
+				<span id="logo"> <img src="assets/images/logo.png" alt="SmartAdmin"> </span>
 				<!-- END LOGO PLACEHOLDER -->
 
 				<!-- Note: The activity badge color changes when clicked and resets the number to 0
